@@ -25,7 +25,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -46,7 +45,7 @@ public class NotificationServiceImpl implements NotificationService {
     memberService.existsById(memberId);
     List<Notification> notifications = notificationRepository.findAllByMemberIdAndDeletedAtNull(
         memberId);
-    return notifications.stream().map(notificationMapper::toDto).collect(Collectors.toList());
+    return notifications.stream().map(notificationMapper::toDto).toList();
   }
 
   @Override
@@ -102,12 +101,14 @@ public class NotificationServiceImpl implements NotificationService {
   }
 
   @Override
+  @Transactional
   public void readNotification(final Long notificationId) {
     Notification notification = findById(notificationId);
     notification.check();
   }
 
   @Override
+  @Transactional
   public void deleteNotification(final Long notificationId) {
     Notification notification = findById(notificationId);
     notification.delete();
